- bug fixes for node-sass not installed - added inline and modal spinner with documentation - corrected modal spinner alignment

--- a/src/app/components/spinner/spinner.component.css
+++ b/src/app/components/spinner/spinner.component.css
@@ -14,7 +14,7 @@
     position: absolute;
     z-index: 101;
     top: 50%;
-    left: 50%;
+    left: 48%;
 }
 
   .lds-ripple div {
